Solucionado problema de los Commits anónimos